unitTested Drools